--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^3.2.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
